fix page top spacing

--- a/src/app/providers/style/Layout.module.scss
+++ b/src/app/providers/style/Layout.module.scss
@@ -1,17 +1,15 @@
 @import "@mixin";
+
 .main {
   flex-grow: 1;
   display: flex;
   flex-direction: column;
   gap: 100px;
-  padding-top: 55px;
 
   @include tablet {
     gap: 50px;
-    padding-top: 30px;
   }
   @include mobile {
     gap: 50px;
-    padding-top: 30px;
   }
 }
